--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
     </header>
     <!-- ======= Hero Section ======= -->
-    <section id="hero" class="d-flex align-items-center justify-content-center">
+    <section id="hero" class="section d-flex align-items-center justify-content-center">
         <div class="container" data-aos="fade-up">
 
             <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="150">
