--- a/index.html
+++ b/index.html
@@ -213,61 +213,58 @@
             <h2>Contactez-nous</h2>
         </div>
         <p>Prêt à discuter de votre projet et à concrétiser vos idées ? Contactez notre équipe d'experts dès aujourd'hui pour une consultation et un devis gratuit.</p>
-
         <div class="row mt-5">
-
             <div class="col-lg-4">
-            <div class="info">
-
-                <div class="email">
-                <i class="bi bi-envelope"></i>
-                <h4>Email:</h4>
-                <p>codesquare@gmail.com</p>
+                <div class="info">
+                    <div class="email">
+                        <i class="bi bi-envelope"></i>
+                        <h4>Email:</h4>
+                        <p>codesquareinfo@gmail.com</p>
+                    </div>
+                    <!-- <div class="address">
+                        <i class="bi bi-geo-alt"></i>
+                        <h4>Adresse:</h4>
+                        <p></p>
+                    </div>
+                    <div class="phone">
+                        <i class="bi bi-phone"></i>
+                        <h4>Téléphone:</h4>
+                        <p></p>
+                    </div> -->
                 </div>
-
-                <div class="address">
-                    <i class="bi bi-geo-alt"></i>
-                    <h4>Adresse:</h4>
-                    <p></p>
-                </div>
-
-                <div class="phone">
-                <i class="bi bi-phone"></i>
-                <h4>Téléphone:</h4>
-                <p></p>
-                </div>
-
             </div>
-
+            <div class="col-lg-8 mt-5 mt-lg-0" id="email-step-1">
+                <iframe name="form-content" id="form-content" style="display: none">
+                </iframe>
+                <form action="https://api.staticforms.xyz/submit" method="post" role="form" class="email-form" target="form-content">
+                    <input type="hidden" name="accessKey" value="2c3541ac-86de-4fa0-bfb1-8b50c23ab798">
+                    <input type="text" name="honeypot" style="display: none;">
+                    <input type="hidden" name="subject" value="CodeSquare Form Submitted">
+                    <div class="row">
+                    <div class="col-md-6 form-group">
+                        <input type="text" name="name" class="form-control" id="name" placeholder="Votre nom" required>
+                    </div>
+                    <div class="col-md-6 form-group mt-3 mt-md-0">
+                        <input type="email" class="form-control" name="email" id="email" placeholder="Votre adresse courriel" required>
+                    </div>
+                    </div>
+                    <div class="form-group mt-3">
+                        <input type="text" class="form-control" name="$usersubject" id="subject" placeholder="Sujet" required>
+                    </div>
+                    <div class="form-group mt-3">
+                        <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
+                    </div>
+                    <div class="my-3">
+                        <div class="loading">Loading</div>
+                        <div class="error-message"></div>
+                        <div class="sent-message">Your message has been sent. Thank you!</div>
+                    </div>
+                    <div class="text-center"><button type="submit" id="submit-button">Envoyer</button></div>
+                </form>
             </div>
-
-            <div class="col-lg-8 mt-5 mt-lg-0">
-
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
-                <div class="row">
-                <div class="col-md-6 form-group">
-                    <input type="text" name="name" class="form-control" id="name" placeholder="Votre nom" required>
-                </div>
-                <div class="col-md-6 form-group mt-3 mt-md-0">
-                    <input type="email" class="form-control" name="email" id="email" placeholder="Votre adresse courriel" required>
-                </div>
-                </div>
-                <div class="form-group mt-3">
-                    <input type="text" class="form-control" name="subject" id="subject" placeholder="Sujet" required>
-                </div>
-                <div class="form-group mt-3">
-                    <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
-                </div>
-                <div class="my-3">
-                    <div class="loading">Loading</div>
-                    <div class="error-message"></div>
-                    <div class="sent-message">Your message has been sent. Thank you!</div>
-                </div>
-                <div class="text-center"><button type="submit">Envoyer</button></div>
-            </form>
-
+            <div class="col-lg-8 mt-5 mt-lg-0" id="email-step-2" style="display: none;">
+                Votre message est en route ! Nous vous contacterons bientôt pour discuter de votre projet.
             </div>
-
         </div>
 
         </div>
@@ -282,6 +279,7 @@
 
     <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="site.js"></script>
