Change corpo email

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                     <div class="email">
                         <i class="bi bi-envelope"></i>
                         <h4>Email:</h4>
-                        <p>codesquareinfo@gmail.com</p>
+                        <p>info@codesquare.ca</p>
                     </div>
                     <!-- <div class="address">
                         <i class="bi bi-geo-alt"></i>
@@ -237,7 +237,7 @@
                 <iframe name="form-content" id="form-content" style="display: none">
                 </iframe>
                 <form action="https://api.staticforms.xyz/submit" method="post" role="form" class="email-form" target="form-content">
-                    <input type="hidden" name="accessKey" value="2c3541ac-86de-4fa0-bfb1-8b50c23ab798">
+                    <input type="hidden" name="accessKey" value="ea267602-951b-4a2b-b6c3-e27a92f870b9">
                     <input type="text" name="honeypot" style="display: none;">
                     <input type="hidden" name="subject" value="CodeSquare Form Submitted">
                     <div class="row">
