--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Code&sup2;</title>
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
-
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="images/favicon.png">
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <!-- Bootstrap Icons -->
@@ -20,8 +21,8 @@
 <body id="page-top">
     <header id="header" class="fixed-top">
         <div class="container d-flex align-items-center justify-content-lg-between">
-            <!-- <a href="index.html" class="logo me-auto me-lg-0"><img src="images/logo-48.png" alt="" class="img-fluid"></a> -->
-            <h1 class="logo me-auto me-lg-0"><a href="index.html">Code<span>²</span></a></h1>
+            <a href="index.html" class="logo me-auto me-lg-0"><img src="images/logo.png" alt="" class="img-fluid"></a>
+            <!-- <h1 class="logo me-auto me-lg-0"><a href="index.html">Code<span>²</span></a></h1> -->
             <nav id="navbar" class="navbar order-last order-lg-0">
                 <ul>
                     <li><a class="nav-link scrollto active" href="#hero">Accueil</a></li>
