--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; Informatique CodeSquare - 2023
+            &copy; 2023 Informatique CodeSquare inc. - Tous droits réservés
         </div>
     </footer>
 
