Ajout de l'adresse

--- a/index.html
+++ b/index.html
@@ -222,12 +222,12 @@
                         <h4>Email:</h4>
                         <p>info@codesquare.ca</p>
                     </div>
-                    <!-- <div class="address">
+                    <div class="address">
                         <i class="bi bi-geo-alt"></i>
                         <h4>Adresse:</h4>
-                        <p></p>
+                        <p>14199 rue Gilles, Mirabel (QC), J7J 2R9</p>
                     </div>
-                    <div class="phone">
+                    <!-- <div class="phone">
                         <i class="bi bi-phone"></i>
                         <h4>Téléphone:</h4>
                         <p></p>
